# botforuni_selfmade

./: Dockerfile  README.md  requirements.txt  ruff.toml
app/: bot_runtime.py
app/api/: main.py
app/bot/: __init__.py  admin.py  commands.py  filters.py  handlers.py  main.py
app/core/: config.py  db.py  init_db.py
app/ingestion/: asr.py  docs.py  ocr.py  storage.py
app/rag/: indexer.py  llm.py  search.py  summarize.py
infra/: app.Dockerfile
tests/data/: README.txt
Бот для чатов (3)/: Makefile  pyproject.toml
Бот для чатов (3)/GET http:/localhost:8000/: healthz
Бот для чатов (3)/app/core/: config.py  logging.py
Бот для чатов (3)/app/ingestion/: asr.py  docs.py  storage.py
Бот для чатов (3)/app/workers/: jobs.py  queue.py
Бот для чатов (3)/infra/: docker-compose.yml  nginx.example.conf
